--- a/app/resources/cy/translation/iht/waitingforhmrc.json
+++ b/app/resources/cy/translation/iht/waitingforhmrc.json
@@ -1,8 +1,8 @@
 {
   "title": "Arhoswch 20 diwrnod gwaith o’r adeg y gwnaethoch anfon yr IHT400 i HMRC",
   "question": "Arhoswch 20 diwrnod gwaith o’r adeg y gwnaethoch anfon yr IHT400 i HMRC",
-  "line1" : "Fe anfonir y llythyr gan HMRC hyd at 20 diwrnod gwaith ar ôl i chi gyflwyno eich IHT400.",
-  "line2" : "Os nad ydych wedi cael eich llythyr gan HMRC ar ôl 20 diwrnod",
+  "line1" : "Fe anfonir y llythyr neu’r e-bost gan HMRC hyd at 20 diwrnod gwaith ar ôl i chi gyflwyno’ch ffurflen IHT400.",
+  "line2" : "Os nad ydych wedi cael eich llythyr neu e-bost gan HMRC ar ôl 20 diwrnod",
   "contactHeading": "Defnyddiwch y rhif ffôn hwn i gysylltu â HMRC:",
   "contactParagraph1": "Rhif ffôn: 0300 123 1072",
   "contactParagraph2": "Dydd Llun i ddydd Gwener 9am i 5pm (ac eithrio gwyliau cyhoeddus)",
