--- a/app/resources/en/translation/iht/waitingforhmrc.json
+++ b/app/resources/en/translation/iht/waitingforhmrc.json
@@ -1,8 +1,8 @@
 {
   "title": "Wait 20 working days from when you sent the IHT400 to HMRC",
   "question": "Wait 20 working days from when you sent the IHT400 to HMRC",
-  "line1" : "The letter from HMRC will be sent out up to 20 working days after you submit your IHT400.",
-  "line2" : "If you have not received your letter from HMRC after 20 days",
+  "line1" : "The letter or email from HMRC will be sent out up to 20 working days after you submit your IHT400.",
+  "line2" : "If you have not received your letter or email from HMRC after 20 days",
   "contactHeading": "Contact HMRC on this number:",
   "contactParagraph1": "Telephone: 0300 123 1072",
   "contactParagraph2": "Monday to Friday, 9am to 5pm (except public holidays)",
