--- a/app/resources/cy/translation/iht/estateform.json
+++ b/app/resources/cy/translation/iht/estateform.json
@@ -1,11 +1,7 @@
 {
-  "title": "Pa ffurflenni wnaethoch chi eu cyflwyno i CThEM?",
-  "question": "Pa ffurflenni wnaethoch chi eu cyflwyno i CThEM?",
-  "optionIHT400421": "IHT400 a IHT421",
-  "optionIHT400": "IHT400 yn unig",
-  "optionIHT205Conditional": "Nid oedd Treth Etifeddiant i'w thalu",
-  "optionIHT400Conditional": "Dewiswch yr opsiwn hwn dim ond os gwnaethoch gais ar ôl 17 Ionawr 2024",
-  "optionIHT400421Conditional": "Dewiswch yr opsiwn hwn dim ond os gwnaethoch gais cyn 17 Ionawr 2024",
+  "title": "Pa ffurflen wnaethoch chi gyflwyno i Gyllid a Thollau EF (HMRC)?",
+  "question": "Pa ffurflen wnaethoch chi gyflwyno i Gyllid a Thollau EF (HMRC)?",
+  "optionIHT400": "IHT400",
   "optionIHT205": "IHT205",
   "errors": {
     "ihtEstateId": {
