--- a/app/resources/cy/translation/iht/uniqueprobatecode.json
+++ b/app/resources/cy/translation/iht/uniqueprobatecode.json
@@ -2,7 +2,7 @@
   "title": "Nodwch y cod profiant unigryw a anfonodd CThEF atoch",
   "heading1": "Nodwch y cod profiant unigryw a anfonodd CThEF atoch",
   "label": "Cod CThEF",
-  "hint" : "Mae'r cod profiant unigryw yn edrych fel hyn: CTS 0405231104 3tpp s8e9 ac mae ar dudalen gyntaf y llythyr.",
+  "hint" : "Mae’r cod profiant unigryw yn edrych fel hyn: 040523 1104 3tpp s8e9 ac mae wedi’i nodi ar dudalen gyntaf y llythyr neu’r e-bost.",
   "errors" : {
     "uniqueProbateCodeId" : {
       "required" : "Mae'r cod profiant unigryw wedi'i nodi'n anghywir. Mae gan y cod profiant unigryw 21 nod ac mae yn y fformat hwn CTS 0405231104 3tpp s8e9",
