DTSPB-4523 Changed Welsh text

--- a/app/resources/cy/translation/iht/newsubmittedtohmrc.json
+++ b/app/resources/cy/translation/iht/newsubmittedtohmrc.json
@@ -8,7 +8,7 @@
 
   "errors": {
     "estateValueCompleted": {
-      "required": "Rhaid i chi ddewis opsiwn i barhau"
+      "required": "Dewiswch 'Nac oedd' os nad oedd angen i chi gyflwyno ffurflen i HMRC"
     }
   }
 }
