--- a/app/resources/en/translation/iht/unusedallowanceclaimed.json
+++ b/app/resources/en/translation/iht/unusedallowanceclaimed.json
@@ -1,6 +1,6 @@
 {
     "title": "Are you claiming the unused Inheritance Tax allowance (known as the &lsquo;nil-rate band&rsquo;) of the spouse or civil partner of the person who died?",
-    "question": "Are you claiming the unused Inheritance Tax allowance (known as the &lsquo;nil-rate band&rsquo;) of the spouse or civil partner of the person who died?",
+    "question": "Are you claiming the unused Inheritance Tax allowance of {deceasedName}’s husband, wife or civil partner?",
     "hint": "Everyone has a £325,000 tax free allowance before they must pay Inheritance Tax. If you are applying for probate for the estate of someone who did not use some or all of the allowance when their spouse or civil partner died, you can add that remaining allowance to this application.",
     "optionYes": "Yes",
     "optionNo": "No",
