DTSPB-4523 changed net value content for IHT400

--- a/app/resources/cy/translation/iht/probateestatevalues.json
+++ b/app/resources/cy/translation/iht/probateestatevalues.json
@@ -24,7 +24,7 @@
   "netHint205": "Gwerth net yr ystâd ar gyfer profiant",
   "netHint207": "Gwerth net yr ystad ar gyfer profiant yn y DU mewn &pound;",
   "netHint421": "Gwerth net yr ystâd ar gyfer profiant",
-  "netHint400": "Gwerth net ar gyfer profiant",
+  "netHint400": "Gwerth net yr ystad ar gyfer profiant",
   "netHintNoIHT": "<strong>Gwerth net ar gyfer profiant</strong><br><br>I gyfrifo hyn, dechreuwch gyda’r gwerth gros ar gyfer profiant a gyfrifwyd uchod a dileu cyfanswm gwerth unrhyw dreuliau angladd a’r holl ddyledion, sy’n ddyledus gan y sawl a fu farw adeg ei farwolaeth. Peidiwch â chynnwys dyledion sy'n ddyledus ar y cyd â phobl eraill, fel morgais ar eiddo sy'n eiddo ar y cyd.<br><br>",
   "poundSymbol": "&pound;",
   "grossValueSummary": "Gwerth gros ar gyfer profiant mewn &pound;",
