DTSPB-4523 Changed back link

--- a/app/resources/cy/translation/common.json
+++ b/app/resources/cy/translation/common.json
@@ -10,7 +10,7 @@
   "acceptAndApply": "Derbyn y gwahoddiad a gwneud cais",
   "checkApply": "Gwirio y gallwch wneud cais",
   "createAccount": "Creu eich cyfrif",
-  "back": "Yn &ocirc;l",
+  "back": "Yn ôl",
   "backArrow": "&lt;&nbsp;",
   "continue": "Parhau",
   "saveAndContinue": "Arbed a pharhau",
