--- a/app/resources/cy/translation/coapplicant/agreepage.json
+++ b/app/resources/cy/translation/coapplicant/agreepage.json
@@ -6,5 +6,5 @@
   "paragraph2": "Dylai {leadExecFullName} gael y grant profiant o fewn 12 wythnos i gyflwyno&rsquo;r cais. Gall gymryd mwy o amser os oes angen iddo/iddi ddarparu gwybodaeth ychwanegol.",
   "paragraph3": "Cysylltwch &acirc; {leadExecFullName} os ydych angen mwy o wybodaeth.",
   "paragraph4a": "Mae hwn yn wasanaeth newydd - ",
-  "paragraph4b": "bydd eich adborth yn ein helpu ni i&rsquo;w wella (agor mewn ffenestr newydd)"
+  "paragraph4b": "bydd eich adborth yn ein helpu ni i&rsquo;w wella (yn agor mewn tab newydd)"
 }
