--- a/app/resources/cy/translation/screeners/mentalcapacity.json
+++ b/app/resources/cy/translation/screeners/mentalcapacity.json
@@ -3,7 +3,7 @@
   "title": "A yw&rsquo;r holl ysgutorion yn gallu gwneud eu penderfyniadau eu hunain",
   "question": "A yw&rsquo;r holl ysgutorion yn gallu gwneud eu penderfyniadau eu hunain?",
   "hintText1": "Ni all rai pobl wneud eu penderfyniadau eu hunain, er enghraifft oherwydd anaf i&rsquo;w hymennydd neu salwch megis dementia.",
-  "hintText2": "Rhagor o wybodaeth am <a target=\"_blank\" rel=\"external noopener\" href=\"{assessingMentalCapacity}\" class=\"govuk-link\" aria-label=\"wirio galluedd meddyliol (yn agor mewn ffenestr newydd)\">wirio galluedd meddyliol (yn agor mewn ffenestr newydd)</a>.",
+  "hintText2": "Rhagor o wybodaeth am <a target=\"_blank\" rel=\"external noopener\" href=\"{assessingMentalCapacity}\" class=\"govuk-link\" aria-label=\"wirio galluedd meddyliol (yn agor mewn tab newydd)\">wirio galluedd meddyliol (yn agor mewn tab newydd)</a>.",
   "optionYes": "Ydyn",
   "optionNo": "Nac ydyn",
 
