--- a/app/resources/en/translation/coapplicant/agreepage.json
+++ b/app/resources/en/translation/coapplicant/agreepage.json
@@ -6,5 +6,5 @@
   "paragraph2": "{leadExecFullName} should get the grant of probate within 12 weeks of submitting the application. It can take longer if they need to provide additional information.",
   "paragraph3": "Contact {leadExecFullName} if you need more information.",
   "paragraph4a": "This is a new service - ",
-  "paragraph4b": "your feedback will help us to improve it (opens in a new window)"
+  "paragraph4b": "your feedback will help us to improve it (opens in a new tab)"
 }
