--- a/app/resources/en/translation/iht/waitingforhmrc.json
+++ b/app/resources/en/translation/iht/waitingforhmrc.json
@@ -6,7 +6,7 @@
   "contactHeading": "Contact HMRC on this number:",
   "contactParagraph1": "Telephone: 0300 123 1072",
   "contactParagraph2": "Monday to Friday, 9am to 5pm (except public holidays)",
-  "contactParagraph3": "<a href=\"{callChargesLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"Find out about call charges (opens in a new window)\">Find out about call charges (opens in a new window)</a>",
+  "contactParagraph3": "<a href=\"{callChargesLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"Find out about call charges (opens in a new tab)\">Find out about call charges (opens in a new tab)</a>",
 
   "errors": {}
 
