--- a/app/resources/en/translation/static/contact.json
+++ b/app/resources/en/translation/static/contact.json
@@ -3,7 +3,7 @@
   "heading1": "Probate",
   "paragraph1": "Webchat",
   "paragraph2": "Email",
-  "paragraph3": "<a href=\"{callChargesLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"Find out about call charges (opens in a new window)\">Find out about call charges (opens in a new window)</a>",
+  "paragraph3": "<a href=\"{callChargesLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"Find out about call charges (opens in a new tab)\">Find out about call charges (opens in a new tab)</a>",
   "paragraph4": "{helpTelephoneOpeningHoursTitle}",
   "paragraph5": "{helpTelephoneOpeningHours1}",
   "paragraph6": "{helpTelephoneOpeningHours1}",
