--- a/app/resources/en/translation/thankyou.json
+++ b/app/resources/en/translation/thankyou.json
@@ -28,10 +28,10 @@
   "checklist-item4-interim-death-cert": "the interim death certificate",
   "checklist-item4-foreign-death-cert": "the original foreign death certificate",
   "checklist-item4-foreign-death-cert-translation": "the English translation of the foreign death certificate",
-  "checklist-item5-foreign-death-cert-PA19": "either a completed PA19 - <a target=\"_blank\" rel=\"external noopener\" href=\"{applicationFormPA19}\" class=\"govuk-link\">Foreign death certificate form (opens in a new window)</a> or a certificate from the translator confirming the translation's validity",
-  "checklist-item6-spouse-renouncing": "a <a href=\"{renunciationFormLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"renunciation form (opens in a new window)\">renunciation form (opens in a new window)</a> filled in by the spouse or civil partner of the deceased who is permanently giving up the right to make this application for probate",
+  "checklist-item5-foreign-death-cert-PA19": "either a completed PA19 - <a target=\"_blank\" rel=\"external noopener\" href=\"{applicationFormPA19}\" class=\"govuk-link\">Foreign death certificate form (opens in a new tab)</a> or a certificate from the translator confirming the translation's validity",
+  "checklist-item6-spouse-renouncing": "a <a href=\"{renunciationFormLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"renunciation form (opens in a new tab)\">renunciation form (opens in a new tab)</a> filled in by the spouse or civil partner of the deceased who is permanently giving up the right to make this application for probate",
   "checklist-item7-iht205": "the completed inheritance tax form IHT205",
-  "checklist-item8-renunciated": "a <a href=\"{renunciationFormLink}\" target=\"_blank\" class=\"govuk-link\" rel=\"external noopener\" aria-label=\"renunciation form (opens in a new window)\">renunciation form (opens in a new window)</a> filled in by any executors who are permanently giving up their right to make this application for probate",
+  "checklist-item8-renunciated": "a <a href=\"{renunciationFormLink}\" target=\"_blank\" class=\"govuk-link\" rel=\"external noopener\" aria-label=\"renunciation form (opens in a new tab)\">renunciation form (opens in a new tab)</a> filled in by any executors who are permanently giving up their right to make this application for probate",
   "checklist-item9-deed-poll": "copy of the deed poll document for {executorCurrentName}",
   "checklist-item10-iht207": "send us the IHT207 form",
   "checklist-item11-spouse-giving-up-admin-rights-PA16": "<a href=\"{spouseGivingUpAdminRightsPA16Link}\" target=\"_blank\" class=\"govuk-link\" rel=\"external noopener\" aria-label=\"Give up probate administrator rights paper form\">Give up probate administrator rights paper form</a> - Form PA16",
@@ -42,5 +42,5 @@
   "successParagraph2NoDocumentsRequired": "You'll usually get the grant within 12 weeks. It can take longer if you need to provide additional information.",
   "successParagraph2": "A caseworker will review your application.<br><br>You&rsquo;ll usually get the grant within 12 weeks. It can take longer if you need to provide additional information.",
   "successParagraph3": "You don't need to do anything else now, we'll email you if we need more information.",
-  "successParagraph4": "Find out what to do <a href=\"{findOutNext}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"when you receive your grant (opens in a new window)\">when you receive your grant (opens in a new window)</a>."
+  "successParagraph4": "Find out what to do <a href=\"{findOutNext}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"when you receive your grant (opens in a new tab)\">when you receive your grant (opens in a new tab)</a>."
 }
