DTSPB-4801: Tidy up remaining Welsh content issues

--- a/app/resources/cy/translation/static/accessibility.json
+++ b/app/resources/cy/translation/static/accessibility.json
@@ -10,7 +10,7 @@
   "list1-item4": "mynd drwy&rsquo;r rhan fwyaf o&rsquo;r wefan gan ddefnyddio meddalwedd adnabod llais",
   "list1-item5": "gwrando ar y rhan fwyaf o&rsquo;r wefan gan ddefnyddio darllenydd sgrin (gan gynnwys fersiynau diweddaraf JAWS, NVDA a VoiceOver)",
   "paragraph4": "Rydym hefyd wedi sicrhau ein bod wedi defnyddio iaith syml ar y wefan.",
-  "paragraph5": "Mae gan <a href=\"{myAbilityLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"AbilityNet (agor mewn ffenestr newydd)\">AbilityNet (agor mewn ffenestr newydd)</a> gyngor ar wneud eich dyfais yn haws i&rsquo;w defnyddio os oes gennych anabledd.",
+  "paragraph5": "Mae gan <a href=\"{myAbilityLink}\" class=\"govuk-link\" target=\"_blank\" rel=\"external noopener\" aria-label=\"AbilityNet (yn agor mewn tab newydd)\">AbilityNet (yn agor mewn tab newydd)</a> gyngor ar wneud eich dyfais yn haws i&rsquo;w defnyddio os oes gennych anabledd.",
 
   "heading2": "Pa mor hygyrch yw&rsquo;r wefan hon",
   "paragraph6": "Gwyddwn nad yw rhai rhannau o&rsquo;r wefan hon yn gwbl hygyrch:",
