DTSPB-4800 Change Eligibility hint text

--- a/app/resources/cy/translation/screeners/deathcertificatetranslation.json
+++ b/app/resources/cy/translation/screeners/deathcertificatetranslation.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "Oes gennych chi gyfieithiad Saesneg o&rsquo;r dystysgrif marwolaeth?",
   "question": "Oes gennych chi gyfieithiad Saesneg o&rsquo;r dystysgrif marwolaeth?",
   "optionYes": "Oes",
