--- a/app/resources/en/translation/screeners/deathcertificatetranslation.json
+++ b/app/resources/en/translation/screeners/deathcertificatetranslation.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Eligibility to apply online",
+  "eligibilityTitle": "Check if you can apply online",
   "title": "Do you have an English translation of the death certificate?",
   "question": "Do you have an English translation of the death certificate?",
   "optionYes": "Yes",
