--- a/app/resources/en/translation/screeners/eedeceaseddod.json
+++ b/app/resources/en/translation/screeners/eedeceaseddod.json
@@ -1,5 +1,5 @@
 {
-    "eligibilityTitle": "Eligibility to apply online",
+    "eligibilityTitle": "Check if you can apply online",
     "title": "Excepted estates deceased date of death",
     "question": "Did the person die on or after 1 January 2022?",
     "optionYes": "Yes",
