--- a/app/resources/en/translation/screeners/willleft.json
+++ b/app/resources/en/translation/screeners/willleft.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Eligibility to apply online",
+  "eligibilityTitle": "Check if you can apply online",
   "title": "Did the person who died leave a will",
   "question": "Did the person who died leave a will?",
   "optionYes": "Yes",
