--- a/app/resources/en/translation/screeners/willoriginal.json
+++ b/app/resources/en/translation/screeners/willoriginal.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Eligibility to apply online",
+  "eligibilityTitle": "Check if you can apply online",
   "title": "Do you have the original will and any codicils",
   "question": "Do you have the original will and any codicils?",
   "optionYes": "Yes",
