--- a/app/resources/cy/translation/screeners/applicantexecutor.json
+++ b/app/resources/cy/translation/screeners/applicantexecutor.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "Ydych chi wedi&rsquo;ch enwi fel ysgutor",
   "question": "Ydych chi wedi cael eich enwi fel ysgutor yn yr ewyllys neu godisil?",
   "hintText1": "Mae ysgutor yn gyfrifol am gyflawni cyfarwyddiadau&rsquo;r ewyllys.",
