--- a/app/resources/cy/translation/screeners/deathcertificateinenglish.json
+++ b/app/resources/cy/translation/screeners/deathcertificateinenglish.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "Ydy&rsquo;r dystysgrif marwolaeth wreiddiol yn Saesneg?",
   "question": "Ydy&rsquo;r dystysgrif marwolaeth wreiddiol yn Saesneg?",
   "optionYes": "Ydy",
