--- a/app/resources/cy/translation/screeners/eedeceaseddod.json
+++ b/app/resources/cy/translation/screeners/eedeceaseddod.json
@@ -1,5 +1,5 @@
 {
-    "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+    "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
     "title": "A wnaeth yr unigolyn farw ar neu ar &ocirc;l 1 Ionawr 2022?",
     "question": "A wnaeth yr unigolyn farw ar neu ar &ocirc;l 1 Ionawr 2022?",
     "optionYes": "Do",
