--- a/app/resources/cy/translation/screeners/mentalcapacity.json
+++ b/app/resources/cy/translation/screeners/mentalcapacity.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "A yw&rsquo;r holl ysgutorion yn gallu gwneud eu penderfyniadau eu hunain",
   "question": "A yw&rsquo;r holl ysgutorion yn gallu gwneud eu penderfyniadau eu hunain?",
   "hintText1": "Ni all rai pobl wneud eu penderfyniadau eu hunain, er enghraifft oherwydd anaf i&rsquo;w hymennydd neu salwch megis dementia.",
