--- a/app/resources/cy/translation/screeners/otherapplicants.json
+++ b/app/resources/cy/translation/screeners/otherapplicants.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "A ydych chi&rsquo;n bwriadu gwneud cais ar y cyd",
   "question": "A ydych chi&rsquo;n bwriadu gwneud cais ar y cyd?",
   "hintText": "Efallai yr hoffech wneud cais gydag aelod o&rsquo;ch teulu, er enghraifft eich chwaer neu frawd.",
