--- a/app/resources/cy/translation/screeners/relatedtodeceased.json
+++ b/app/resources/cy/translation/screeners/relatedtodeceased.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "A ydych chi&rsquo;n &wcirc;r/gwraig, yn bartner sifil neu&rsquo;n blentyn yr unigolyn sydd wedi marw",
   "question": "A ydych chi&rsquo;n &wcirc;r/gwraig, yn bartner sifil neu&rsquo;n blentyn yr unigolyn sydd wedi marw?",
   "hintText1": "Mae&rsquo;n rhaid ichi fod yn &wcirc;r/gwraig, yn bartner sifil neu&rsquo;n blentyn dros 18 oed yr unigolyn sydd wedi marw i barhau gyda&rsquo;ch cais ar-lein.",
