--- a/app/resources/cy/translation/screeners/willleft.json
+++ b/app/resources/cy/translation/screeners/willleft.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "A wnaeth yr unigolyn sydd wedi marw adael ewyllys",
   "question": "A wnaeth yr unigolyn sydd wedi marw adael ewyllys?",
   "optionYes": "Do",
