--- a/app/resources/cy/translation/screeners/willoriginal.json
+++ b/app/resources/cy/translation/screeners/willoriginal.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "Oes gennych chi&rsquo;r ewyllys wreiddiol ac unrhyw godisiliau?",
   "question": "Oes gennych chi&rsquo;r ewyllys wreiddiol ac unrhyw godisiliau?",
   "optionYes": "Oes",
