--- a/app/resources/cy/translation/stoppage.json
+++ b/app/resources/cy/translation/stoppage.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Cymhwysedd i wneud cais ar-lein",
+  "eligibilityTitle": "Gwiriwch i weld os yw’n bosib i chi wneud cais ar-lein",
   "title": "Ni allwch barhau",
   "defaultHeader": "Yn anffodus, ni allwch ddefnyddio&rsquo;r gwasanaeth ar-lein",
   "deathCertificateHeader": "Mae arnoch angen y dystysgrif marwolaeth neu dystysgrif marwolaeth interim",
