--- a/app/resources/en/translation/screeners/applicantexecutor.json
+++ b/app/resources/en/translation/screeners/applicantexecutor.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Eligibility to apply online",
+  "eligibilityTitle": "Check if you can apply online",
   "title": "Are you named as an executor",
   "question": "Are you named as an executor on the will or a codicil?",
   "hintText1": "An executor is responsible for carrying out the instructions in the will.",
