--- a/app/resources/en/translation/screeners/deathcertificateinenglish.json
+++ b/app/resources/en/translation/screeners/deathcertificateinenglish.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Eligibility to apply online",
+  "eligibilityTitle": "Check if you can apply online",
   "title": "Is the original death certificate in English?",
   "question": "Is the original death certificate in English?",
   "optionYes": "Yes",
