--- a/app/resources/en/translation/screeners/diedafteroctober2014.json
+++ b/app/resources/en/translation/screeners/diedafteroctober2014.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Eligibility to apply online",
+  "eligibilityTitle": "Check if you can apply online",
   "title": "Did the person die on or after 1 October 2014",
   "question": "Did the person die on or after 1&nbsp;October&nbsp;2014?",
   "optionYes": "Yes",
