--- a/app/resources/en/translation/screeners/otherapplicants.json
+++ b/app/resources/en/translation/screeners/otherapplicants.json
@@ -1,5 +1,5 @@
 {
-  "eligibilityTitle": "Eligibility to apply online",
+  "eligibilityTitle": "Check if you can apply online",
   "title": "Are you planning to make a joint application",
   "question": "Are you planning to make a joint application?",
   "hintText": "You may want to apply with someone in your family, for example your sister or brother.",
