Pick up text from existing strings.
Added a couple for no JS enabled and for when status is being checked.

--- a/app/resources/en/translation/common.json
+++ b/app/resources/en/translation/common.json
@@ -92,6 +92,8 @@
   "helpChatAlreadyOpen": "A web chat window is already open.",
   "helpChatOpeningHours": "Monday to Friday, 9:00am to 5:00pm.",
   "helpChatMaintenance": "Sorry, we’re having technical difficulties. Try email or telephone instead.",
+  "helpChatCheckingAvail": "Checking availability…",
+  "helpChatNeedsJavascript": "Webchat needs javascript enabling.",
 
   "errors": {
     "formSubmissionUnsuccessful": {
