--- a/app/resources/cy/translation/common.json
+++ b/app/resources/cy/translation/common.json
@@ -94,6 +94,7 @@
   "helpChatMaintenance": "Nid yw gwasanaeth sgwrsio dros y we profiant ar gael dros dro tra byddwn yn ceisio datrys problem dechnegol. Ymddiheurwn am unrhyw anghyfleustra a achosir.",
   "helpChatCheckingAvail": "WIP (not translated) Checking availability… WIP",
   "helpChatNeedsJavascript": "WIP (not translated) Webchat needs javascript enabling WIP",
+  "helpChatNeedsPopups": "WIP (not translated) Popup blocked. Please allow pop-ups for this site. WIP",
 
   "errors": {
     "formSubmissionUnsuccessful": {
