DTSPB-4801: Add missing yn to welsh tab opening content

--- a/app/resources/cy/translation/iht/reportestatevalues.json
+++ b/app/resources/cy/translation/iht/reportestatevalues.json
@@ -3,7 +3,7 @@
   "header": "Canfod a oes angen i chi adrodd am werth yr ystad i Gyllid a Thollau Ei Fawrhydi (HMRC)",
   "paragraph1prefix": "Gallwch ddefnyddio’r ",
   "paragraph1suffix": " ti ganfod a oes arnoch angen adrodd am werth yr ystad i HMRC.",
-  "linkText": "Gwiriwr Treth Etifeddiaeth (agor mewn tab newydd)",
+  "linkText": "Gwiriwr Treth Etifeddiaeth (yn agor mewn tab newydd)",
   "continueApplication": " Parhau gyda’ch cais",
 
   "errors": {}
