DTSPB-4801: Add missing opens in new tab text

--- a/app/resources/en/translation/iht/ihtestatevalues.json
+++ b/app/resources/en/translation/iht/ihtestatevalues.json
@@ -5,7 +5,7 @@
     "linkText": "Inheritance Tax (IHT) checker (opens in a new tab)",
     "questionHintSuffix": ".<br/><br/>When you use the checker, make sure you save the results as you can copy the figures straight from the checker results onto this page.<br /><br />The values you enter can be estimates, but must be whole numbers, not including decimals, full stops or commas. For example, 25000, not 25,000.",
     "estateGrossValue": "Gross estate value for IHT:<br><br>",
-    "estateGrossValueHint": "This is the value of all assets like property, money, and <a href=\"https://www.gov.uk/inheritance-tax/gifts\" class=\"govuk-link\" target=\"_blank\">gifts in the last 7 years</a>, before taking off any debts owed by the person who died.",
+    "estateGrossValueHint": "This is the value of all assets like property, money, and <a href=\"https://www.gov.uk/inheritance-tax/gifts\" class=\"govuk-link\" target=\"_blank\">gifts in the last 7 years (opens in a new tab)</a>, before taking off any debts owed by the person who died.",
     "estateNetValue": "Net estate value for IHT:<br><br>",
     "estateNetValueHint": "Starting with the gross value above, take away any debts like mortgage and credit cards.",
     "estateNetQualifyingValue": "Net qualifying estate value for IHT:<br><br>",
